Fix round 1: honour the collection Nullable prohibitions and the constraint annotation contract